Changes for 3.4.11rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.10

3.4.10rc1 was released as 3.4.10 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.10rc1

Bug fixes:
..F....... [ZBX-14414] fixed PHP 7.2 error message in the Monitoring->Latest data page (Sasha)
A.F....... [ZBX-13712] fixed "Undefined index: master_itemid" and SQL errors in item.update and itemprototypr.update methods; fixed updating of discovered items (Sasha)
..F....... [ZBX-13549] fixed displaying of not monitored triggers in maps (miks)
..F....... [ZBX-12359] fixed "Automatic icon selection" checkbox not working and displaying two icons at once in map constructor (Ivo)
........S. [ZBX-14333] fixed {ESC.HISTORY} and action log not to display colon without target host when executed on Zabbix server (vso)
A.F....... [ZBX-13361] fixed error messages when configuring an existing item to have an update interval (miks)
........S. [ZBX-13043] removed error message for when user has defined media but all of them are disabled (viktors)
........S. [ZBX-14312] fixed possible deadlock in history syncer when housekeeper is deleting events (vso)
..F....... [ZBX-13697] fixed session expiration when changing default authentication method (miks)
A.F....... [ZBX-13680] fixed action not being cloned due to existing operation id being submitted (agriscenko)
..F....... [ZBX-13775] fixed map tree widget border color (Andzs)
...G...PS. [ZBX-13782] fixed decoding of Unicode characters in JSON (Andris)
..F....... [ZBX-13767] fixed "undefined index: acknowledges" error on problems page (agriscenko)
..F....... [ZBX-12175] fixed subfilter entries with long names going off the screen (agriscenko, Andzs)
..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)