@@ -77,7 +77,8 @@ extern char		*CONFIG_SOURCE_IP;
 
 #define ZBX_VMWARE_CACHE_UPDATE_PERIOD	CONFIG_VMWARE_FREQUENCY
 #define ZBX_VMWARE_PERF_UPDATE_PERIOD	CONFIG_VMWARE_PERF_FREQUENCY
-#define ZBX_VMWARE_SERVICE_TTL	SEC_PER_DAY
+#define ZBX_VMWARE_SERVICE_TTL		SEC_PER_DAY
+#define ZBX_XML_DATETIME		26
 
 static ZBX_MUTEX	vmware_lock = ZBX_MUTEX_NULL;
 
@@ -148,7 +149,7 @@ zbx_vmware_perf_value_t;
 /* performance data for a performance collector entity */
 typedef struct
 {
-	/* entity type: HostSystem or VirtualMachine */
+	/* entity type: HostSystem, Datastore or VirtualMachine */
 	char			*type;
 
 	/* entity id */
@@ -252,7 +253,11 @@ int	vmware_vm_compare(const void *d1, const void *d2)
 	"/*/*/*[local-name()='Fault']/*[local-name()='faultstring']"
 
 #define ZBX_XPATH_REFRESHRATE()										\
-	"/*/*/*/*/*[local-name()='refreshRate']"
+	"/*/*/*/*/*[local-name()='refreshRate' and ../*[local-name()='currentSupported']='true']"
+
+#define ZBX_XPATH_ISAGGREGATE()										\
+	"/*/*/*/*/*[local-name()='entity'][../*[local-name()='summarySupported']='true' and "		\
+	"../*[local-name()='currentSupported']='false']"
 
 #define ZBX_XPATH_COUNTERINFO()										\
 	"/*/*/*/*/*[local-name()='propSet']/*[local-name()='val']/*[local-name()='PerfCounterInfo']"
@@ -293,6 +298,7 @@ static size_t	curl_write_cb(void *ptr, size_t size, size_t nmemb, void *userdata
 {
 	size_t	r_size = size * nmemb;
 
+	ZBX_UNUSED(ptr);
 	ZBX_UNUSED(userdata);
 
 	zbx_strncpy_alloc(&page.data, &page.alloc, &page.offset, ptr, r_size);
@@ -585,6 +591,7 @@ static void	vmware_entities_shared_clean_stats(zbx_hashset_t *entities)
 static void	vmware_datastore_shared_free(zbx_vmware_datastore_t *datastore)
 {
 	__vm_mem_free_func(datastore->name);
+	__vm_mem_free_func(datastore->id);
 
 	if (NULL != datastore->uuid)
 		__vm_mem_free_func(datastore->uuid);
@@ -933,10 +940,7 @@ static zbx_vmware_datastore_t	*vmware_datastore_shared_dup(const zbx_vmware_data
 	datastore = __vm_mem_malloc_func(NULL, sizeof(zbx_vmware_datastore_t));
 	datastore->uuid = vmware_shared_strdup(src->uuid);
 	datastore->name = vmware_shared_strdup(src->name);
-
-	datastore->capacity = src->capacity;
-	datastore->free_space = src->free_space;
-	datastore->uncommitted = src->uncommitted;
+	datastore->id = vmware_shared_strdup(src->id);
 
 	return datastore;
 }
@@ -1146,6 +1150,7 @@ static void	vmware_datastore_free(zbx_vmware_datastore_t *datastore)
 {
 	zbx_free(datastore->name);
 	zbx_free(datastore->uuid);
+	zbx_free(datastore->id);
 	zbx_free(datastore);
 }
 
@@ -1569,7 +1574,8 @@ static int	zbx_property_collection_next(zbx_property_collection_iter *iter)
 	if (NULL == iter->token)
 		return FAIL;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "%s() continue retrieving properties with token: '%s'", __function_name, iter->token);
+	zabbix_log(LOG_LEVEL_DEBUG, "%s() continue retrieving properties with token: '%s'", __function_name,
+			iter->token);
 
 	token_esc = xml_escape_dyn(iter->token);
 	zbx_snprintf(post, sizeof(post), ZBX_POST_CONTINUE_RETRIEVE_PROPERTIES, iter->property_collector, token_esc);
@@ -1631,6 +1637,8 @@ static	int	vmware_service_get_contents(CURL *easyhandle, char **contents, char *
 
 	int		err, opt, ret = FAIL;
 
+	ZBX_UNUSED(service);
+
 	if (CURLE_OK != (err = curl_easy_setopt(easyhandle, opt = CURLOPT_POSTFIELDS, ZBX_POST_VMWARE_CONTENTS)))
 	{
 		*error = zbx_dsprintf(*error, "Cannot set cURL option %d: %s.", opt, curl_easy_strerror(err));
@@ -1667,7 +1675,7 @@ out:
  *                                                                            *
  * Parameters: service      - [IN] the vmware service                         *
  *             easyhandle   - [IN] the CURL handle                            *
- *             type         - [IN] the entity type (HostSystem or             *
+ *             type         - [IN] the entity type (HostSystem, Datastore or  *
  *                                 VirtualMachine)                            *
  *             id           - [IN] the entity id                              *
  *             refresh_rate - [OUT] a pointer to variable to store the        *
@@ -1678,7 +1686,7 @@ out:
  *               FAIL    - the authentication process has failed              *
  *                                                                            *
  ******************************************************************************/
-static int	vmware_service_get_perf_counter_refreshrate(const zbx_vmware_service_t *service, CURL *easyhandle,
+static int	vmware_service_get_perf_counter_refreshrate(zbx_vmware_service_t *service, CURL *easyhandle,
 		const char *type, const char *id, int *refresh_rate, char **error)
 {
 #	define ZBX_POST_VCENTER_PERF_COUNTERS_REFRESH_RATE			\
@@ -1694,7 +1702,7 @@ static int	vmware_service_get_perf_counter_refreshrate(const zbx_vmware_service_
 	char		tmp[MAX_STRING_LEN], *value = NULL, *id_esc;
 	int		err, opt, ret = FAIL;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() type: %s id: %s", __function_name, type, id);
 
 	id_esc = xml_escape_dyn(id);
 
@@ -1722,7 +1730,16 @@ static int	vmware_service_get_perf_counter_refreshrate(const zbx_vmware_service_
 	if (NULL != (*error = zbx_xml_read_value(page.data, ZBX_XPATH_FAULTSTRING())))
 		goto out;
 
-	if (NULL == (value = zbx_xml_read_value(page.data, ZBX_XPATH_REFRESHRATE())))
+	if (NULL != (value = zbx_xml_read_value(page.data, ZBX_XPATH_ISAGGREGATE())))
+	{
+		zbx_free(value);
+		*refresh_rate = ZBX_VMWARE_PERF_INTERVAL_NONE;
+		ret = SUCCEED;
+
+		zabbix_log(LOG_LEVEL_DEBUG, "%s() refresh_rate: unused", __function_name);
+		goto out;
+	}
+	else if (NULL == (value = zbx_xml_read_value(page.data, ZBX_XPATH_REFRESHRATE())))
 	{
 		*error = zbx_strdup(*error, "Cannot find refreshRate.");
 		goto out;
@@ -2320,9 +2337,8 @@ static zbx_vmware_datastore_t	*vmware_service_create_datastore(const zbx_vmware_
 		ZBX_POST_VSPHERE_FOOTER
 
 	const char		*__function_name = "vmware_service_create_datastore";
-	char			tmp[MAX_STRING_LEN], *uuid = NULL, *name = NULL, *path, *value, *id_esc;
+	char			tmp[MAX_STRING_LEN], *uuid = NULL, *name = NULL, *path, *id_esc;
 	zbx_vmware_datastore_t	*datastore = NULL;
-	zbx_uint64_t		capacity = ZBX_MAX_UINT64, free_space = ZBX_MAX_UINT64, uncommitted = ZBX_MAX_UINT64;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() datastore:'%s'", __function_name, id);
 
@@ -2365,30 +2381,10 @@ static zbx_vmware_datastore_t	*vmware_service_create_datastore(const zbx_vmware_
 		zbx_free(path);
 	}
 
-	if (NULL != (value = zbx_xml_read_value(page.data, ZBX_XPATH_DATASTORE_SUMMARY("capacity"))))
-	{
-		is_uint64(value, &capacity);
-		zbx_free(value);
-	}
-
-	if (NULL != (value = zbx_xml_read_value(page.data, ZBX_XPATH_DATASTORE_SUMMARY("freeSpace"))))
-	{
-		is_uint64(value, &free_space);
-		zbx_free(value);
-	}
-
-	if (NULL != (value = zbx_xml_read_value(page.data, ZBX_XPATH_DATASTORE_SUMMARY("uncommitted"))))
-	{
-		is_uint64(value, &uncommitted);
-		zbx_free(value);
-	}
-
 	datastore = zbx_malloc(NULL, sizeof(zbx_vmware_datastore_t));
 	datastore->name = (NULL != name) ? name : zbx_strdup(NULL, id);
 	datastore->uuid = uuid;
-	datastore->capacity = capacity;
-	datastore->free_space = free_space;
-	datastore->uncommitted = uncommitted;
+	datastore->id = zbx_strdup(NULL, id);
 out:
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 
@@ -3407,6 +3403,8 @@ static int	vmware_service_get_clusters(CURL *easyhandle, char **clusters, char *
 
 	int		err, o, ret = FAIL;
 
+	ZBX_UNUSED(service);
+
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	if (CURLE_OK != (err = curl_easy_setopt(easyhandle, o = CURLOPT_POSTFIELDS, ZBX_POST_VCENTER_CLUSTER)))
@@ -3478,6 +3476,8 @@ static int	vmware_service_get_cluster_status(CURL *easyhandle, const char *clust
 
 	char		tmp[MAX_STRING_LEN], *clusterid_esc;
 	int		err, o, ret = FAIL;
+
+	ZBX_UNUSED(service);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() clusterid:'%s'", __function_name, clusterid);
 
@@ -3668,7 +3668,7 @@ out:
  *                                                                            *
  * Parameters: service  - [IN] the vmware service                             *
  *             type     - [IN] the performance entity type (HostSystem,       *
- *                             (VirtualMachine...)                            *
+ *                             (Datastore, VirtualMachine...)                 *
  *             id       - [IN] the performance entity id                      *
  *             counters - [IN] NULL terminated list of performance counters   *
  *                             to be monitored for this entity                *
@@ -3751,6 +3751,11 @@ static void	vmware_service_update_perf_entities(zbx_vmware_service_t *service)
 						"cpu/ready[summation]", NULL
 					};
 
+	const char			*ds_perfcounters[] = {
+						"disk/used[latest]", "disk/provisioned[latest]",
+						"disk/capacity[latest]", NULL
+					};
+
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	now = time(NULL);
@@ -3765,6 +3770,17 @@ static void	vmware_service_update_perf_entities(zbx_vmware_service_t *service)
 		{
 			vm = hv->vms.values[i];
 			vmware_service_add_perf_entity(service, "VirtualMachine", vm->id, vm_perfcounters, now);
+			zabbix_log(LOG_LEVEL_TRACE, "%s() for type: VirtualMachine hv id: %s hv uuid: %s linked vm id:"
+					" %s vm uuid: %s", __function_name, hv->id, hv->uuid, vm->id, vm->uuid);
+		}
+
+		for (i = 0; i < hv->datastores.values_num; i++)
+		{
+			zbx_vmware_datastore_t	*ds = hv->datastores.values[i];
+			vmware_service_add_perf_entity(service, "Datastore", ds->id, ds_perfcounters, now);
+			zabbix_log(LOG_LEVEL_TRACE, "%s() for type: Datastore hv id: %s hv uuid: %s linked ds id:"
+					" %s ds name: %s ds uuid: %s", __function_name, hv->id, hv->uuid, ds->id,
+					ds->name, ds->uuid);
 		}
 	}
 
@@ -3931,7 +3947,7 @@ static int	vmware_service_process_perf_entity_data(zbx_vector_ptr_t *pervalues, 
 
 	for (i = 0; i < nodeset->nodeNr; i++)
 	{
-		value = zbx_xml_read_node_value(doc, nodeset->nodeTab[i], "*[local-name()='value']");
+		value = zbx_xml_read_node_value(doc, nodeset->nodeTab[i], "*[local-name()='value'][last()]");
 		instance = zbx_xml_read_node_value(doc, nodeset->nodeTab[i], "*[local-name()='id']"
 				"/*[local-name()='instance']");
 		counter = zbx_xml_read_node_value(doc, nodeset->nodeTab[i], "*[local-name()='id']"
@@ -4140,13 +4156,13 @@ static void	vmware_service_update_perf(zbx_vmware_service_t *service)
 	zbx_hashset_iter_reset(&service->entities, &iter);
 	while (NULL != (entity = zbx_hashset_iter_next(&iter)))
 	{
-		if (0 != entity->refresh)
+		if (ZBX_VMWARE_PERF_INTERVAL_UNKNOWN != entity->refresh)
 			continue;
 
 		local_entity = zbx_malloc(NULL, sizeof(zbx_vmware_perf_entity_t));
 		local_entity->type = zbx_strdup(NULL, entity->type);
 		local_entity->id = zbx_strdup(NULL, entity->id);
-		local_entity->refresh = 0;
+		local_entity->refresh = ZBX_VMWARE_PERF_INTERVAL_UNKNOWN;
 
 		zbx_vector_ptr_append(&entities, local_entity);
 	}
@@ -4188,7 +4204,7 @@ static void	vmware_service_update_perf(zbx_vmware_service_t *service)
 	{
 		char	*id_esc;
 
-		if (0 == entity->refresh)
+		if (ZBX_VMWARE_PERF_INTERVAL_UNKNOWN == entity->refresh)
 		{
 			zabbix_log(LOG_LEVEL_DEBUG, "skipping performance entity with zero refresh rate "
 					"type:%s id:%d", entity->type, entity->id);
@@ -4199,24 +4215,44 @@ static void	vmware_service_update_perf(zbx_vmware_service_t *service)
 
 		/* add entity performance counter request */
 		zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:querySpec>"
-				"<ns0:entity type=\"%s\">%s</ns0:entity><ns0:maxSample>1</ns0:maxSample>",
-				entity->type, id_esc);
+				"<ns0:entity type=\"%s\">%s</ns0:entity>", entity->type, id_esc);
 
 		zbx_free(id_esc);
+
+		if (ZBX_VMWARE_PERF_INTERVAL_NONE == entity->refresh)
+		{
+			time_t st_raw;
+			struct tm st;
+			char st_str[ZBX_XML_DATETIME];
+
+			/* add startTime for entity performance counter request for decrease XML data load */
+			st_raw = zbx_time() - SEC_PER_HOUR;
+			st = *gmtime(&st_raw);
+			strftime(st_str, sizeof(st_str), "%Y-%m-%dT%XZ", &st);
+			zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:startTime>%s</ns0:startTime>",st_str);
+		}
+
+		zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:maxSample>1</ns0:maxSample>");
 
 		for (j = 0; j < entity->counters.values_num; j++)
 		{
 			counter = (zbx_vmware_perf_counter_t *)entity->counters.values[j];
 
 			zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:metricId><ns0:counterId>" ZBX_FS_UI64
-					"</ns0:counterId><ns0:instance>*</ns0:instance></ns0:metricId>",
-					counter->counterid);
+					"</ns0:counterId><ns0:instance>%s</ns0:instance></ns0:metricId>",
+					counter->counterid, ZBX_VMWARE_PERF_INTERVAL_NONE == entity->refresh ?
+					"" : "*");
 
 			counter->state |= ZBX_VMWARE_COUNTER_UPDATING;
 		}
 
-		zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:intervalId>%d</ns0:intervalId></ns0:querySpec>",
+		if (ZBX_VMWARE_PERF_INTERVAL_NONE != entity->refresh)
+		{
+			zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "<ns0:intervalId>%d</ns0:intervalId>",
 				entity->refresh);
+		}
+
+		zbx_snprintf_alloc(&tmp, &tmp_alloc, &tmp_offset, "</ns0:querySpec>");
 	}
 
 	zbx_vmware_unlock();
@@ -4237,10 +4273,11 @@ static void	vmware_service_update_perf(zbx_vmware_service_t *service)
 
 	if (CURLE_OK == (err = curl_easy_perform(easyhandle)))
 	{
+		zabbix_log(LOG_LEVEL_TRACE, "%s() SOAP response: %s", __function_name, page.data);
+
 		/* parse performance data into local memory */
 		zbx_vector_ptr_create(&perfdata);
 		vmware_service_parse_perf_data(&perfdata, page.data);
-
 		ret = SUCCEED;
 	}
 	else
@@ -4469,7 +4506,7 @@ int	zbx_vmware_service_add_perf_counter(zbx_vmware_service_t *service, const cha
 
 	if (NULL == (pentity = zbx_vmware_service_get_perf_entity(service, type, id)))
 	{
-		entity.refresh = 0;
+		entity.refresh = ZBX_VMWARE_PERF_INTERVAL_UNKNOWN;
 		entity.last_seen = 0;
 		entity.type = vmware_shared_strdup(type);
 		entity.id = vmware_shared_strdup(id);
